# Federated_Learning

./: data_preprocessing.ipynb  preprocess_data.ipynb  result.txt  result_focal_loss.txt  split_data.ipynb  test.ipynb  testset.pt  train0dataset.pt  train1dataset.pt  train2dataset.pt  train3dataset.pt  val0dataset.pt  val1dataset.pt  val2dataset.pt  val3dataset.pt
Baseline/: README.md  pyproject.toml
Baseline/imbalanced/: client_app.py  load_data.py  net.py  server_app.py
Class_weighted/: README.md
FL_imbalanced/: pyproject.toml
FL_imbalanced/flower_project/: client_app.py  load_data.py  net.py  server_app.py
Focal_Loss/: README.md  pyproject.toml  result.txt
Focal_Loss/imbalanced/: loss.py  net.py
Ratio_Loss/: README.md  pyproject.toml
Ratio_Loss/imbalanced/: loss.py  net.py  server_app.py
flower-project/: README.md
flower-project/flower_project/: __init__.py  client_app.py  server_app.py  task.py
imbalance/imbalanced/: __init__.py  client_app.py  net.py
imbalanced/: client_app.py  load_data.py  loss.py  net.py  pyproject.toml  server_app.py  testset.pt  train0dataset.pt  train1dataset.pt  train2dataset.pt  train3dataset.pt  val0dataset.pt  val1dataset.pt  val2dataset.pt  val3dataset.pt
imbalanced/flower_project/: client_app.py  load_data.py  net.py  server_app.py  task.py
imbalanced_random_split/: README.md  pyproject.toml  result.txt
imbalanced_random_split/flower_project/: client_app.py  load_data.py
results/: focal_10_3.txt  ratio_10_3.txt
results/10_1_batch32/: baseline_10_1.txt  class_weighted_10_1.txt  focal_10_1.txt  (+1 more)
(+5 files in other folders)
