[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imbalanced"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "liu"

[tool.flwr.app.components]
serverapp = "imbalanced.server_app:app"
clientapp = "imbalanced.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1.0
local-epochs = 3
learning-rate = 0.01
batch-size = 32

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
